trying to fix css issue of white background on iphone

--- a/src/components/Weather.css
+++ b/src/components/Weather.css
@@ -1,3 +1,12 @@
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+
 /* TITLE */
 .title {
   margin-bottom: 16px;
